--- a/SpringBootEmail/src/main/resources/application.properties
+++ b/SpringBootEmail/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #스프링부트 이메일 전송
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.host=
+spring.mail.port=
 #구글계정
-spring.mail.username=whynotcry94@gmail.com
+spring.mail.username=
 #앱 비밀번호
-spring.mail.password=yfjwikfqkuewwypv
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.timeout=5000
