--- a/EmailDemo/src/main/resources/application.properties
+++ b/EmailDemo/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.servlet.context-path=/api
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 #구글계정
-spring.mail.username=???
+spring.mail.username=whynotcry94@gmail.com
 #앱 비밀번호
-spring.mail.password=???
+spring.mail.password=yfjwikfqkuewwypv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.timeout=5000
